# poimage

./: MANIFEST.in  README.md  setup.cfg
demo/: add_mark.py  del_watermark_demo.py
dev/: image_multi.py  small.py
dev/compress/: test.py
dev/split_img/: test04.py  test06.py  test09.py
poimage/: __init__.py
poimage/api/: image.py
poimage/core/: ImageType.py
poimage/lib/image/: add_watermark_service.py
script/: allpackages.txt  clean.sh
tests/: __init__.py  test.py  test.txt
