[metadata]
name = poimage
version = 0.0.19
description = pip install poimage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.python-office.com/
author = CoderWanFeng
author_email = 1957875073@qq.com
license = MIT
license_file = LICENSE
platforms = any

project_urls =
    Bug Tracker = https://github.com/CoderWanFeng/poimage/issues
    Documentation = https://github.com/CoderWanFeng/poimage/blob/master/README.md
    Source Code = https://github.com/CoderWanFeng/poimage

[options]
packages = find:
install_requires =
    pillow
    alive_progress
    requests
    wordcloud
    jieba
    opencv-python
    pofile

python_requires = >=3.7
include_package_data = True
zip_safe = False

